# facial-attendance-sim

./: CMakeLists.txt  CMakeSettings.json
include/: DBConnection.h  Database.h  Device.h  Display.h  Entity.h  Map.h  Simulation.h
src/: DBConnection.cpp  Database.cpp  Device.cpp  Display.cpp  Entity.cpp  Simulation.cpp  main.cpp
